# bored

./: README.md  pyproject.toml  requirements.txt
bored/: activity.py
tests/: test_bored.py
