[tool.poetry]
name = "bored"
version = "0.1.0"
description = ""
authors = ["Michael Madden <mikemadden42@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
