[tool.poetry]
name = "bored"
version = "0.1.1"
description = ""
authors = ["Michael Madden <mikemadden42@icloud.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mikemadden42/bored"
repository = "https://github.com/mikemadden42/bored"
keywords = ["bored", "api"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # Pylint
    "PL"
]
lint.ignore = [
    # tests use assert
    "S101"
]
